force-app/main/default/objects/DUMMY_HMK_ORDER__c/DUMMY_HMK_ORDER__c.object-meta.xml
<CustomObject>
    <label>DUMMY_HMK_ORDER</label>
    <nameField>
        <label>HmK_Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DUMMY_HMK_ORDERS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>