force-app/main/default/objects/DUMMY_HMK_ORDER__c/fields/CustomerFlag__c.field-meta.xml
<CustomField>
    <fullName>CustomerFlag__c</fullName>
    <label>CustomerFlag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>