force-app/main/default/objects/DUMMY_HMK_ORDER__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <length>5</length>
    <type>Text</type>
</CustomField>