force-app/main/default/objects/DUMMY_HMK_ORDER__c/fields/OrderFlag__c.field-meta.xml
<CustomField>
    <fullName>OrderFlag__c</fullName>
    <label>OrderFlag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>