force-app/main/default/objects/DUMMY_HMK_ORDER__c/fields/ProductFlag__c.field-meta.xml
<CustomField>
    <fullName>ProductFlag__c</fullName>
    <label>ProductFlag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>