force-app/main/default/objects/DUMMY_HMK_ORDER__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_ID__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Region__c</columns>
    <columns>Ship_Mode__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Ship_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>